@@ -17,6 +17,7 @@
         <element value="ftw.simplelayout.ContentPage" />
         <element value="ftw.simplelayout.MapBlock" />
         <element value="ftw.simplelayout.VideoBlock" />
+        <element value="Folder" />
     </property>
 
 
@@ -33,10 +34,9 @@
     <property name="behaviors">
         <element value="ftw.simplelayout.interfaces.ISimplelayout" />
         <element value="collective.dexteritytextindexer.behavior.IDexterityTextIndexer" />
-        <element value="plone.app.dexterity.behaviors.metadata.IDublinCore" />
+        <element value="plone.app.dexterity.behaviors.metadata.IBasic" />
         <element value="plone.app.content.interfaces.INameFromTitle" />
-        <element value="plone.app.dexterity.behaviors.exclfromnav.IExcludeFromNavigation"/>
-        <element value="Products.CMFPlone.interfaces.constrains.ISelectableConstrainTypes"/>
+        <element value="plone.app.referenceablebehavior.referenceable.IReferenceable"/>
     </property>
 
     <!-- View information -->
