@@ -45,7 +45,7 @@ setup(name='ftw.subsite',
       zip_safe=False,
 
       install_requires=[
-          'ftw.upgrade>1.14.0',
+          'ftw.upgrade >= 2.0.0',
           'plone.formwidget.contenttree',
           'plone.formwidget.namedfile',
           'plone.namedfile',
@@ -56,7 +56,6 @@ setup(name='ftw.subsite',
           'plone.autoform',
           'plone.behavior',
           'ftw.simplelayout [contenttypes]',
-          'Products.contentmigration',
           'plone.app.contenttypes<1.2b, >1.1b',
           'plone.app.event',
           'ftw.builder',
